# electrotechnics

./: .gitignore  LICENSE  README.md  pyproject.toml
src/electrotechnics/: circuit.py  plotting.py
src/electrotechnics/examples/: example1.py  example2.py
